Upgraded the Raspberry Pi kernel to 5.10.46.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19730 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi2Gadget.config
+++ b/bootkernel/kernel/RaspberryPi2Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.10.39 Kernel Configuration
+# Linux/arm 5.10.46 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -1052,6 +1052,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # NVME Support
 #
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
 
