--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.39 Kernel Configuration
+# Linux/arm64 5.10.46 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -1088,6 +1088,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # NVME Support
 #
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
 
