Removed dependency upon ../initramfs/initramfs.cpio.gz
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19731 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -82,7 +82,7 @@ dtbs: config.done
 
 # Build kernel and copy binaries
 
-build.done: config.done modules.done ../initramfs/initramfs.cpio.gz
+build.done: config.done modules.done
 	$(MAKE) $(MAKEJOBS) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) $(KERNEL_TARGETS)
 	cp $(KERNEL_SRC)/arch/$(ARCH)/boot/$(KERNEL_IMGSRC) $(KERNEL_IMG)
 
