Manually load kernel modules specified in /etc/modules
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19733 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -650,6 +650,7 @@ endif
 	install -cm 0444 issue					$@/etc
 	install -cm 0444 ld.so.conf				$@/etc
 	install -cm 0644 mdev.conf				$@/etc
+	install -cm 0444 modules				$@/etc
 	install -cm 0444 motd					$@/etc
 	ln -s /proc/mounts					$@/etc/mtab
 	install -cm 0444 $(GCCSYSROOT)/usr/etc/netconfig	$@/etc
