Use BOARDBASE instead of BOARDNAME in OSNAME
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19743 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/GPIO/Makefile
+++ b/extensions/GPIO/Makefile
@@ -27,7 +27,7 @@ include $(MUNTSOS)/include/$(BOARDNAME).mk
 include $(LIBSIMPLEIO)/include/dpkg.mk
 
 BUILDFLAGS	:= BOARDNAME=$(BOARDNAME) MUNTSOS=$(MUNTSOS)
-OSNAME		:= muntsos-$(BOARDNAME)
+OSNAME		:= muntsos-$(BOARDBASE)
 PKGNAME		:= GPIO-server
 PKGVERSION	:= $(shell date +%Y.%j)
 PKGARCH		:= $(DEBARCH)
