--- a/extensions/openvpn/Makefile
+++ b/extensions/openvpn/Makefile
@@ -37,7 +37,7 @@ SRCSERVER	= https://swupdate.openvpn.org/community/releases
 SRCURL		= $(SRCSERVER)/$(SRCTARBALL)
 SRCDIST		= $(TEMP)/$(SRCTARBALL)
 
-OSNAME		= muntsos-$(BOARDNAME)
+OSNAME		= muntsos-$(BOARDBASE)
 PKGNAME		= $(SRCNAME)
 PKGVERSION	= $(SRCVER)-$(shell date +%Y.%j)
 PKGARCH		= $(DEBARCH)
