Added configuration notes.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19744 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/v4l2rtspserver/v4l2rtspserver.conf
+++ b/extensions/v4l2rtspserver/v4l2rtspserver.conf
@@ -1,4 +1,14 @@
-# This is the configuration file for the v4l2rtspserver.
+# This is the configuration file for v4l2rtspserver.
+
+# You must make the following system configuration changes to run v4l2rtspserver:
+#
+# 1. Add gpu_mem=128 and start_x=1 to /boot/config.txt.
+# 2. Add bcm2835-v4l2 and bcm2835-codec to /etc/modules.
+# 3. Change ENABLED=0 to ENABLED=1 below.
+#
+# The RTSP video stream URL will be:
+#
+# rtsp://<hostname>:8554/ts
 
 # Set this to 1 to enable the service. This is so you can configure it before it starts up.
 ENABLED=0
