--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.48 Kernel Configuration
+# Linux/arm64 5.10.52 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -2036,6 +2036,7 @@ CONFIG_RPI_POE_POWER=y
 # CONFIG_CHARGER_BQ25980 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_HWMON is not set
@@ -4095,8 +4096,6 @@ CONFIG_PARTITION_PERCPU=y
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
-# CONFIG_RESET_BRCMSTB_RESCAL is not set
-# CONFIG_RESET_INTEL_GW is not set
 CONFIG_RESET_RASPBERRYPI=y
 CONFIG_RESET_SIMPLE=y
 # CONFIG_RESET_TI_SYSCON is not set
