Added missing rm -rf
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19890 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/hostapd/Makefile
+++ b/extensions/hostapd/Makefile
@@ -101,7 +101,7 @@ clean:
 	if [ ! -f $(PKGFILE).downloaded ]; then rm -f $(PKGFILE) ; fi
 
 reallyclean: clean
-	$(PKGFILE) $(PKGFILE).downloaded
+	rm -rf $(PKGFILE) $(PKGFILE).downloaded
 
 distclean: reallyclean
 	rm -rf $(SRCDIST)
