--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -466,17 +466,17 @@ endif
 	@head -n 22 mdnsd.c | tail -n 21 | cut -c 4-		>>$@
 	@echo "**** serialnumber:"				>>$@
 	@head -n 22 serialnumber.c | tail -n 21 | cut -c 4-	>>$@
-	@echo "** glibc:"                                       >>$@
+	@echo "** Shared Libraries:"				>>$@
+	@echo ""						>>$@
+	@echo "**** glibc:"					>>$@
 	@echo ""						>>$@
 	@cat $(TOOLCHAIN_DIR)/share/licenses/glibc/COPYING	>>$@
-	@echo ""						>>$@
-	@echo "** Shared Libraries:"				>>$@
 	@echo ""						>>$@
 	@cat $(GCCSYSROOT)/usr/COPYING				>>$@
 	@echo ""						>>$@
 	@echo "**** libsimpleio:"				>>$@
 	@echo ""						>>$@
-	@cat $(GCCSYSROOT)/usr/share/doc/libsimpleio/COPYING	>>$@
+	@cat $(GCCSYSROOT)/usr/share/libsimpleio/COPYING	>>$@
 	@sed -i 's/\f//'					$@
 	@dos2unix						$@
 
