Changed default from Linaro to Crosstool
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19903 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -28,7 +28,7 @@ BOARDNAME	?= RaspberryPi
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 BOARDNAMES	= BeagleBone RaspberryPi1 RaspberryPi2
-TOOLCHAIN	= Linaro
+TOOLCHAIN	= Crosstool
 
 BOARDNAMELC	:= $(shell echo $(BOARDNAME) | tr A-Z a-z)
 TOOLCHAINLC	:= $(shell echo $(TOOLCHAIN) | tr A-Z a-z)
