Include package version and OSNAME in the package filename
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19904 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -44,7 +44,7 @@ default:
 	sed -i 's/@@TOOLCHAIN@@/$(TOOLCHAINLC)/g' control.everything
 	equivs-build control.everything
 	rm control.everything
-	mv muntsos-$(TOOLCHAINLC)_$(PKGVERSION)_all.deb muntsos-$(TOOLCHAINLC)-all.deb
+	mv muntsos-$(TOOLCHAINLC)_$(PKGVERSION)_all.deb muntsos-$(TOOLCHAINLC)-$(PKGVERSION)-$(OSNAME)-all.deb
 	for P in $(BOARDNAMES) ; do $(MAKE) package BOARDNAME=$$P CONTROL=control.template2 ; done
 	$(MAKE) package BOARDNAME=AArch64 CONFIGURE_NAME=aarch64-linux-gnu CONTROL=control.template3
 
